# netflix-watching-behavior-project

./: .gitignore  Dockerfile  README  README.md  architecture.excalidraw  docker-compose-airflow.yml  pyproject.toml  requirements.txt
dags/: download.py  inspect_gcs_parquet_schema.py  netflix_gcs_to_bq_dbt.py  read_data.py  streamlit_dashboard.py
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/macros/: generate_schema_name.sql
dbt/models/marts/: mart_content_performance.sql  mart_genre_trends.sql  mart_recommendation_performance.sql  mart_user_engagement.sql
dbt/models/staging/: schema.yml  sources.yml  stg_movies.sql  stg_recommendation_logs.sql  stg_reviews.sql  stg_search_logs.sql  stg_users.sql  stg_watch_history.sql
infra/terraform/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
streamlit/: streamlit_app.py
